# Render

./: CMakeLists.txt  README.md  camera.h  gl_utility.hpp  main.cpp  mesh.hpp  model.hpp  shader.h  vertex.cpp  vertex.hpp
shader/: fragment.shader  lightFragment.shader  singleColor.shader  vertex.shader
